--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "lenis": "^1.3.16",
+    "lottie-react": "^2.4.1",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.0",
